--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3"
