--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-text-loop-next": "0.0.3",
     "styled-components": "^5.3.3"
   },
   "scripts": {
